--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
-
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-  <link href="./assets/css/deveb.ilkel.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
+  {% include header.html %}
 </head>
 <body data-gnl="ortada">
-  <div data-gnl="1 1p" class="header">{% include header.html %}</div>
-  <div data-gnl="23 24p">{{ content }}</div>
-  <div data-gnl="1 1p">{% include foot.html %}</div>
+  <div data-gnl="1 1p" class="header">
+    {% include header.html %}
+  </div>
+  <div data-gnl="23 24p">
+    {{ content }}
+  </div>
+  <div data-gnl="1 1p">
+    {% include foot.html %}
+  </div>
 </body>
 </html>
