header.html > head.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  {% include header.html %}
+  {% include head.html %}
 </head>
 <body data-gnl="ortada">
   <div data-gnl="1 1p" class="header">
