--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
 <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet">
+<link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
 <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
 
