--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 {% include head.html %}
 </head>
-<body data-deveb="ortada">
+<body data-deveb="kap ortada">
   <div data-gnl="1 1p" class="header">
   {% include header.html %}
   </div>
