--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <div data-gnl="1 1p" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23 24p">
+  <div data-deveb="kaplama" data-gnl="23 24p">
   {{ content }}
   </div>
   <div data-gnl="1 1p">
