--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 <head>
 {% include head.html %}
 </head>
-<body data-deveb="kap ortada">
+<body data-gnl="ortada">
   <div data-gnl="1 1p" class="header">
   {% include header.html %}
   </div>
-  <div data-deveb="kaplama" data-gnl="23 24p">
+  <div data-gnl="23 24p kaplama">
   {{ content }}
   </div>
   <div data-gnl="1 1p">
