--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div id="header" data-gnl="24 24p ortada göbekte" class="ap-beyaz beri-alt-1 kenar-alt" style="min-height:60px;">
   <div data-gnl="23 ger göbekte">
-    <ul class="menü-genel" data-gnl="kap göbekte">
+    <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
-    <ul class="menü-genel" data-gnl="göbekte">
+    <ul class="menü-genel" data-gnl="0 göbekte">
       <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Kurulum</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
