--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,14 +3,14 @@
 <head>
 {% include head.html %}
 </head>
-<body data-deveb="kap ortada">
-  <div data-gnl="1 1p" class="header">
+<body data-gnl="ortada">
+  <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23 24p">
+  <div data-gnl="23">
   {{ content }}
   </div>
-  <div data-gnl="1 1p">
+  <div data-gnl="24">
   {% include foot.html %}
   </div>
 </body>
