--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@
 {% include head.html %}
 </head>
 <body data-gnl="ortada">
-  <div data-gnl="1 1p" class="header">
+  <div data-gnl="24" class="header">
   {% include header.html %}
   </div>
-  <div data-gnl="23 24p kaplama">
+  <div data-gnl="23 kaplama">
   {{ content }}
   </div>
-  <div data-gnl="1 1p">
+  <div data-gnl="24">
   {% include foot.html %}
   </div>
 </body>
